--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.2",
     "@reduxjs/toolkit": "^1.8.2",
+    "@tanstack/react-query": "^5.84.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
